--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,23 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "assets": "./assets",
-    "icons": "./src/icons/index.ts",
-    "icons/native": "./src/icons/index.native.ts",
-    "components": "./src/components/index.ts",
-    "components/native": "./src/components/index.native.ts"
+    "./types": "./src/types/index.ts",
+    "./brand": "./src/brand/index.ts",
+    "./components": "./src/components/index.ts",
+    "./icons": "./src/icons/index.ts",
+    "./social": "./src/social/index.ts",
+    "./native/brand": "./src/brand/index.native.ts",
+    "./native/components": "./src/components/index.native.ts",
+    "./native/icons": "./src/icons/index.native.ts",
+    "./native/social": "./src/social/index.native.ts"
   },
   "scripts": {
     "fmt": "biome format --no-errors-on-unmatched",
     "fmt:fix": "biome format --write --no-errors-on-unmatched",
     "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --write --no-errors-on-unmatched"
+    "lint:fix": "biome lint --write --no-errors-on-unmatched",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@mona-ca/core": "workspace:*",
     "@mona-ca/tailwind-helpers": "workspace:*",
     "lucide-react": "^0.429.0",
     "lucide-react-native": "^0.429.0",
-    "nativewind": "^4.0.36",
+    "nativewind": "^4.1.4",
     "react-native": "0.74.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-svg": "15.2.0"
