--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -30,7 +30,8 @@
     },
     "plugins": ["expo-router", "expo-font"],
     "experiments": {
-      "typedRoutes": true
+      "typedRoutes": true,
+      "tsconfigPaths": true
     }
   }
 }
