--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "expo start --dev-client",
     "dev:ios": "expo start --ios --dev-client",
-    "ios": "expo run:ios",
-    "ios:device": "expo run:ios --device",
-    "android": "expo run:android",
+    "build:ios": "expo run:ios",
+    "build:ios:device": "expo run:ios --device",
+    "build:android": "expo run:android",
     "fmt": "biome format --no-errors-on-unmatched",
     "fmt:fix": "biome format --write --no-errors-on-unmatched",
     "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --apply --no-errors-on-unmatched"
+    "lint:fix": "biome lint --write --no-errors-on-unmatched",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "type-check": "tsc --noEmit"
   },
   "jest": {
     "preset": "jest-expo"
@@ -20,7 +23,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@mona-ca/design-tokens": "workspace:*",
+    "@mona-ca/core": "workspace:*",
     "@mona-ca/tailwind-helpers": "workspace:*",
+    "@mona-ca/ui": "workspace:*",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.17",
     "ajv": "^8.17.1",
@@ -51,6 +56,7 @@
     "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
     "@types/react": "^18.2.79",
+    "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.7.0",
     "jest-expo": "^51.0.3",
     "react-native-svg-transformer": "^1.5.0",
