--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,6 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
   "files": {
-    "include": ["**/*.ts*", "**/*.*js*", "**/*.json"],
     "ignore": [
       "node_modules",
       "dist",
@@ -10,7 +9,8 @@
       ".expo",
       "bin",
       "apps/catalog/.storybook/mobile/storybook.requires.ts"
-    ]
+    ],
+    "include": ["**/*.ts*", "**/*.*js*", "**/*.json"]
   },
   "formatter": {
     "formatWithErrors": false,
@@ -35,19 +35,11 @@
   },
   "linter": {
     "rules": {
-      "recommended": true,
       "complexity": {
+        "noForEach": "off",
         "noUselessConstructor": "off",
         "noUselessFragments": "error",
-        "useArrowFunction": "error",
-        "noForEach": "off"
-      },
-      "style": {
-        "noDefaultExport": "error",
-        "noNonNullAssertion": "off"
-      },
-      "suspicious": {
-        "noConsoleLog": "warn"
+        "useArrowFunction": "error"
       },
       "nursery": {
         "useSortedClasses": {
@@ -57,6 +49,22 @@
             "functions": ["tv", "twMerge", "twPseudo", "twColorPalette"]
           }
         }
+      },
+      "recommended": true,
+      "style": {
+        "noDefaultExport": "error",
+        "noNonNullAssertion": "off",
+        "useFilenamingConvention": {
+          "level": "error",
+          "options": {
+            "filenameCases": ["kebab-case"],
+            "requireAscii": true,
+            "strictCase": false
+          }
+        }
+      },
+      "suspicious": {
+        "noConsoleLog": "warn"
       }
     }
   },
@@ -73,8 +81,8 @@
     }
   ],
   "vcs": {
-    "enabled": true,
     "clientKind": "git",
+    "enabled": true,
     "useIgnoreFile": true
   }
 }
