--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -8,7 +8,7 @@
     "sb:web": "storybook dev -p 6006 --no-open -c ./.storybook/web",
     "sb:mobile": "sb-rn-get-stories -c ./.storybook/mobile && cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start --port=8082",
     "sb:ios": "sb-rn-get-stories -c ./.storybook/mobile && cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start --ios --port=8082",
-    "build": "storybook build -o ./.storybook/static",
+    "build": "storybook build -o ./.storybook/static -c ./.storybook/web",
     "build:ios": "expo run:ios",
     "fmt": "biome format --no-errors-on-unmatched",
     "fmt:fix": "biome format --write --no-errors-on-unmatched",
