--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "workspaces": ["apps/*", "packages/*", "tools/*"],
   "scripts": {
     "ci": "act --container-architecture linux/amd64 --secret-file ./.github/act/.secrets --env-file ./.github/act/.env --defaultbranch main",
+    "ci:app-test": "bun ci -W ./.github/workflows/app-test.yaml",
     "build": "turbo build",
     "dev": "turbo dev",
     "fmt": "turbo fmt",
