--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "lefthook": "^1.6.18",
     "turbo": "^2.0.6",
     "typescript": "^5.5.2"
