chore: 🔧 (.vscode) add pattern for tailwind extensions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -187,7 +187,9 @@
     ["twMerge\\(([\\s\\S]*?)\\);", "[\"']([^\"']*).*?[\"']"],
     ["tv\\(([\\s\\S]*?)\\)", "[\"']([^\"']*).*?[\"']"],
     ["twMerge\\(([\\s\\S]*?)\\)", "[\"']([^\"']*).*?[\"']"],
-    ["twPseudo\\(([^)]*)\\)", "[\"']([^\"']*).*?[\"']"]
+    ["twPseudo\\(([^)]*)\\)", "[\"']([^\"']*).*?[\"']"],
+    ["[A-Za-z_][A-Za-z0-9_]*ClassName\\s*[:=]\\s*{?[\"'`]([^\"'`]*).*?[\"'`]"],
+    ["[A-Za-z_][A-Za-z0-9_]*ClassName\\s*[:=]\\s*{?`([^`]*).*?`", "[\"']([^\"']*).*?[\"']"]
   ],
   "tailwindCSS.includeLanguages": {
     "typescript": "javascript",
