--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -21,25 +21,24 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@mona-ca/design-tokens": "workspace:*",
+    "@expo/vector-icons": "^14.0.3",
     "@mona-ca/core": "workspace:*",
+    "@mona-ca/design-tokens": "workspace:*",
     "@mona-ca/tailwind-helpers": "workspace:*",
     "@mona-ca/ui": "workspace:*",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.17",
     "ajv": "^8.17.1",
-    "expo": "^51.0.27",
-    "expo-dev-client": "~4.0.22",
-    "expo-font": "^12.0.8",
+    "expo": "~51.0.34",
+    "expo-dev-client": "~4.0.27",
+    "expo-font": "~12.0.10",
     "expo-linking": "^6.3.1",
     "expo-router": "~3.5.21",
-    "expo-splash-screen": "^0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.7",
     "expo-web-browser": "^13.0.3",
     "jotai": "^2.9.0",
-    "moti": "^0.29.0",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -58,7 +57,7 @@
     "@types/react": "^18.2.79",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.7.0",
-    "jest-expo": "^51.0.3",
+    "jest-expo": "~51.0.4",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
