--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -5,32 +5,34 @@
   "private": true,
   "scripts": {
     "gen:mobile": "sb-rn-get-stories -c ./.storybook/mobile",
-    "sb:web": "storybook dev -p 6006 --no-open -c ./.storybook/web",
-    "sb:mobile": "sb-rn-get-stories -c ./.storybook/mobile && cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start --port=8082",
-    "sb:ios": "sb-rn-get-stories -c ./.storybook/mobile && cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start --ios --port=8082",
+    "sb": "storybook dev -p 6006 --no-open -c ./.storybook/web",
+    "sb:mobile": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start --port=8082",
+    "sb:ios": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start --ios --port=8082",
     "build": "storybook build -o ./.storybook/static -c ./.storybook/web",
     "build:ios": "expo run:ios --port=8082",
+    "build:ios:device": "expo run:ios --device --port=8082",
+    "build:android": "expo run:android --port=8082",
     "fmt": "biome format --no-errors-on-unmatched",
     "fmt:fix": "biome format --write --no-errors-on-unmatched",
     "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
     "lint:fix": "biome lint --write --no-errors-on-unmatched",
-    "android": "expo run:android",
-    "ios": "expo run:ios"
+    "android": "expo run:android"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@react-navigation/native": "^6.1.18",
-    "expo": "~51.0.34",
+    "expo": "~51.0.37",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.23",
-    "expo-font": "~12.0.9",
+    "expo-dev-client": "~4.0.28",
+    "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "nativewind": "^4.1.1",
+    "nativewind": "4.1.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -42,45 +44,46 @@
     "react-native-web": "~0.19.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@chromatic-com/storybook": "^1.6.1",
+    "@babel/core": "^7.25.8",
+    "@babel/plugin-transform-class-static-block": "^7.25.8",
+    "@chromatic-com/storybook": "^2.0.2",
     "@mona-ca/postcss": "workspace:*",
     "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native/babel-preset": "^0.74.87",
-    "@storybook/addon-a11y": "^8.2.9",
+    "@react-native/babel-preset": "^0.74.88",
+    "@storybook/addon-a11y": "^8.3.5",
     "@storybook/addon-actions": "8.1.11",
-    "@storybook/addon-essentials": "^8.2.9",
-    "@storybook/addon-interactions": "^8.2.9",
-    "@storybook/addon-links": "^8.2.9",
-    "@storybook/addon-onboarding": "^8.2.9",
-    "@storybook/addon-ondevice-actions": "^7.6.20",
-    "@storybook/addon-ondevice-controls": "^7.6.20",
+    "@storybook/addon-essentials": "^8.3.5",
+    "@storybook/addon-interactions": "^8.3.5",
+    "@storybook/addon-links": "^8.3.5",
+    "@storybook/addon-onboarding": "^8.3.5",
+    "@storybook/addon-ondevice-actions": "^8.3.6",
+    "@storybook/addon-ondevice-controls": "^8.3.6",
     "@storybook/addon-react-native-web": "^0.0.24",
-    "@storybook/addon-storysource": "^8.2.9",
+    "@storybook/addon-storysource": "^8.3.5",
     "@storybook/addon-styling-webpack": "^1.0.0",
-    "@storybook/addon-themes": "^8.2.9",
+    "@storybook/addon-themes": "^8.3.5",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
-    "@storybook/blocks": "^8.2.9",
+    "@storybook/blocks": "^8.3.5",
     "@storybook/preview-api": "8.1.11",
-    "@storybook/react": "^8.2.9",
-    "@storybook/react-native": "^7.6.20",
-    "@storybook/react-webpack5": "^8.2.9",
-    "@storybook/test": "^8.2.9",
+    "@storybook/react": "^8.3.5",
+    "@storybook/react-native": "^8.3.6",
+    "@storybook/react-webpack5": "^8.3.5",
+    "@storybook/test": "^8.3.5",
     "@storybook/test-runner": "^0.17.0",
     "@types/react": "~18.2.79",
-    "babel-loader": "^9.1.3",
+    "babel-loader": "^9.2.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-react-native-web": "^0.19.12",
     "css-loader": "^7.1.2",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
     "react-native-svg-transformer": "^1.5.0",
-    "storybook": "^8.2.9",
+    "storybook": "^8.3.5",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.13"
   }
 }
