--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,33 +13,31 @@
     "fmt:fix": "biome format --write --no-errors-on-unmatched",
     "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
     "lint:fix": "biome lint --write --no-errors-on-unmatched",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
     "type-check": "tsc --noEmit"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.3",
+    "@expo/vector-icons": "^14.0.4",
     "@mona-ca/core": "workspace:*",
     "@mona-ca/design-tokens": "workspace:*",
     "@mona-ca/tailwind-helpers": "workspace:*",
     "@mona-ca/ui": "workspace:*",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native": "^6.1.18",
     "ajv": "^8.17.1",
-    "expo": "~51.0.34",
-    "expo-dev-client": "~4.0.27",
+    "expo": "~51.0.37",
+    "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.10",
     "expo-linking": "^6.3.1",
-    "expo-router": "~3.5.21",
+    "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.7",
     "expo-web-browser": "^13.0.3",
-    "jotai": "^2.9.0",
-    "nativewind": "^4.0.36",
+    "jotai": "^2.10.0",
+    "nativewind": "4.1.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -48,18 +46,17 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "^0.19.12",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.8",
+    "@babel/core": "^7.25.8",
     "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
-    "@types/react": "^18.2.79",
+    "@types/react": "~18.2.79",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.4",
     "react-native-svg-transformer": "^1.5.0",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "react-test-renderer": "18.2.0"
   }
 }
