--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -27,7 +27,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.18",
     "ajv": "^8.17.1",
-    "expo": "~51.0.37",
+    "expo": "~51.0.38",
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.10",
     "expo-linking": "^6.3.1",
@@ -36,17 +36,18 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.7",
     "expo-web-browser": "^13.0.3",
-    "jotai": "^2.10.0",
-    "nativewind": "4.1.16",
+    "jotai": "^2.10.1",
+    "nativewind": "^4.1.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-keyboard-controller": "^1.14.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-web": "^0.19.12",
-    "tailwindcss": "^3.4.13"
+    "react-native-web": "^0.19.13",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
