--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "ci": "act --container-architecture linux/amd64 --secret-file ./.github/act/.secrets --env-file ./.github/act/.env --defaultbranch main",
     "ci:app-test": "bun ci -W ./.github/workflows/app-test.yaml",
     "build": "turbo build",
-    "dev": "turbo dev",
-    "fmt": "turbo fmt",
-    "lint": "turbo lint",
+    "check": "turbo check",
+    "check:fix": "turbo check:fix",
     "test": "turbo test",
-    "type-check": "turbo type-check",
+    "typecheck": "turbo typecheck",
     "api": "cd ./apps/api && bun",
     "catalog": "cd ./apps/catalog && bun",
     "web": "cd ./apps/web && bun",
