--- a/packages/argon2id/package.json
+++ b/packages/argon2id/package.json
@@ -6,10 +6,8 @@
   "types": "src/index.ts",
   "scripts": {
     "cargo:build": "wasm-pack build ",
-    "fmt": "biome format --no-errors-on-unmatched",
-    "fmt:fix": "biome format --write --no-errors-on-unmatched",
-    "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --apply --no-errors-on-unmatched",
+    "check": "biome check --error-on-warnings --no-errors-on-unmatched",
+    "check:fix": "bun run check --write",
     "test": "bun test",
     "test:watch": "bun test --watch"
   },
