--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,10 +9,8 @@
     "./utils": "./src/utils/index.ts"
   },
   "scripts": {
-    "fmt": "biome format --no-errors-on-unmatched",
-    "fmt:fix": "biome format --write --no-errors-on-unmatched",
-    "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --apply --no-errors-on-unmatched",
+    "check": "biome check --error-on-warnings --no-errors-on-unmatched",
+    "check:fix": "bun run check --write",
     "test": "bun test"
   },
   "devDependencies": {
