--- a/packages/tailwind-helpers/package.json
+++ b/packages/tailwind-helpers/package.json
@@ -11,15 +11,13 @@
   },
   "scripts": {
     "prepare": "bun run build",
+    "gen:pseudo-class": "bun run ./src/scripts/generate-pseudo-class.ts",
     "build": "tsup",
-    "fmt": "biome format --no-errors-on-unmatched",
-    "fmt:fix": "biome format --write --no-errors-on-unmatched",
-    "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --write --no-errors-on-unmatched",
+    "check": "biome check --error-on-warnings --no-errors-on-unmatched",
+    "check:fix": "bun run check --write",
     "pretest": "bun run build",
     "test": "bun test",
-    "gen:pseudo-class": "bun run ./src/scripts/generate-pseudo-class.ts",
-    "type-check": "tsc --noEmit"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@mona-ca/tailwind-config": "workspace:*",
