--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,11 +14,9 @@
     "./native/social": "./src/social/index.native.ts"
   },
   "scripts": {
-    "fmt": "biome format --no-errors-on-unmatched",
-    "fmt:fix": "biome format --write --no-errors-on-unmatched",
-    "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --write --no-errors-on-unmatched",
-    "type-check": "tsc --noEmit"
+    "check": "biome check --error-on-warnings --no-errors-on-unmatched",
+    "check:fix": "bun run check --write",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@mona-ca/core": "workspace:*",
