--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,17 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "wrangler dev ./src/app/index.ts",
-    "fmt": "biome format --no-errors-on-unmatched",
-    "fmt:fix": "biome format --write --no-errors-on-unmatched",
-    "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --write --no-errors-on-unmatched",
+    "check": "biome check --error-on-warnings --no-errors-on-unmatched",
+    "check:fix": "bun run check --write",
+    "test": "vitest --run",
+    "test:watch": "vitest --watch",
+    "typecheck": "tsc --noEmit",
     "db:gen": "drizzle-kit generate",
     "db:mig": "bun db:gen && wrangler d1 migrations apply mona-ca_db",
     "db:std": "cross-env LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit studio --config drizzle.studio.config.ts",
-    "db:std:remote": "drizzle-kit studio  --config drizzle.studio.remote.config.ts",
-    "test": "vitest --run",
-    "test:watch": "vitest --watch",
-    "type-check": "tsc --noEmit"
+    "db:std:remote": "drizzle-kit studio  --config drizzle.studio.remote.config.ts"
   },
   "dependencies": {
     "@elysiajs/swagger": "1.1.1",
