--- a/.github/workflows/app-build.yaml
+++ b/.github/workflows/app-build.yaml
@@ -1,11 +1,11 @@
-name: App-Test
+name: App-Build
 
 on: 
   - push
 
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     
     steps:
@@ -27,7 +27,7 @@ jobs:
           path: ${{ steps.get-bun-cache-directory.outputs.STORE_PATH }}
           key: ${{ runner.os }}-cache-bun-${{ hashFiles('**/bun.lockb') }}
           restore-keys: ${{ runner.os }}-cache-bun-
-
+      
       - name: Get turbo cache
         uses: actions/cache@v4
         with:
@@ -38,5 +38,5 @@ jobs:
       - name: Install Dependencies
         run: bun install --frozen-lockfile
 
-      - name: Build
-        run: bun run build
+      - name: Test
+        run: bun run test
