--- a/.github/workflows/app-build.yaml
+++ b/.github/workflows/app-build.yaml
@@ -38,5 +38,5 @@ jobs:
       - name: Install Dependencies
         run: bun install --frozen-lockfile
 
-      - name: Test
-        run: bun run test
+      - name: Build
+        run: bun run build
