--- a/.github/workflows/app-test.yaml
+++ b/.github/workflows/app-test.yaml
@@ -38,5 +38,5 @@ jobs:
       - name: Install Dependencies
         run: bun install --frozen-lockfile
 
-      - name: Build
-        run: bun run build
+      - name: Test
+        run: bun run test
