--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev": "expo start --dev-client",
     "dev:ios": "expo start --ios --dev-client",
-    "build:ios": "expo run:ios",
-    "build:ios:device": "expo run:ios --device",
-    "build:android": "expo run:android",
+    "ios": "expo run:ios",
+    "android": "expo run:android",
     "check": "biome check --error-on-warnings --no-errors-on-unmatched",
     "check:fix": "bun run check --write",
     "typecheck": "tsc --noEmit"
