--- a/.github/workflows/catalog-build.yaml
+++ b/.github/workflows/catalog-build.yaml
@@ -1,11 +1,11 @@
-name: App-Static-Check
+name: Catalog-Build
 
 on: 
   - push
 
 
 jobs:
-  static-check:
+  build:
     runs-on: ubuntu-latest
     
     steps:
@@ -28,11 +28,15 @@ jobs:
           key: ${{ runner.os }}-cache-bun-${{ hashFiles('**/bun.lockb') }}
           restore-keys: ${{ runner.os }}-cache-bun-
       
+      - name: Get turbo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-cache-turbo-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-cache-turbo-
+
       - name: Install Dependencies
         run: bun install --frozen-lockfile
 
-      - name: Type Check
-        run: bun run typecheck
-
-      - name: Static Check
-        run: bun run check
+      - name: Build
+        run: bunx turbo run sb:build
