ci: 🦺 Update filter in catalog-build.yaml

--- a/.github/workflows/catalog-build.yaml
+++ b/.github/workflows/catalog-build.yaml
@@ -1,13 +1,35 @@
 name: Catalog-Build
 
 on: 
-  - push
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - ready_for_review
 
 
 jobs:
-  build:
+  filter:
     runs-on: ubuntu-latest
-    
+    permissions:
+      pull-requests: read
+    outputs:
+      catalog: ${{ steps.filter.outputs.catalog }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Filter
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: .github/filters.yaml
+
+  build:
+    needs: filter
+    if: ${{ needs.filter.outputs.catalog == 'true' }}
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
