--- a/.github/workflows/app-static-check.yaml
+++ b/.github/workflows/app-static-check.yaml
@@ -1,7 +1,12 @@
 name: App-Static-Check
 
 on: 
-  - push
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - ready_for_review
 
 
 jobs:
@@ -27,13 +32,6 @@ jobs:
           path: ${{ steps.get-bun-cache-directory.outputs.STORE_PATH }}
           key: ${{ runner.os }}-cache-bun-${{ hashFiles('**/bun.lockb') }}
           restore-keys: ${{ runner.os }}-cache-bun-
-
-      - name: Get turbo cache
-        uses: actions/cache@v4
-        with:
-          path: .turbo
-          key: ${{ runner.os }}-cache-turbo-${{ github.sha }}
-          restore-keys: ${{ runner.os }}-cache-turbo-
       
       - name: Install Dependencies
         run: bun install --frozen-lockfile
