--- a/.github/workflows/app-test.yaml
+++ b/.github/workflows/app-test.yaml
@@ -1,7 +1,12 @@
 name: App-Test
 
 on: 
-  - push
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - ready_for_review
 
 
 jobs:
@@ -28,13 +33,6 @@ jobs:
           key: ${{ runner.os }}-cache-bun-${{ hashFiles('**/bun.lockb') }}
           restore-keys: ${{ runner.os }}-cache-bun-
 
-      - name: Get turbo cache
-        uses: actions/cache@v4
-        with:
-          path: .turbo
-          key: ${{ runner.os }}-cache-turbo-${{ github.sha }}
-          restore-keys: ${{ runner.os }}-cache-turbo-
-      
       - name: Install Dependencies
         run: bun install --frozen-lockfile
 
