--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,13 @@
     "editor.defaultFormatter": "biomejs.biome"
   },
   "cSpell.words": ["Elysia", "Pressable"],
-  "commit-message-editor.dynamicTemplate": ["{type}{scope}{description}", "", "{body}", "", "{footer}"],
+  "commit-message-editor.dynamicTemplate": [
+    "{type}{scope}{breaking_change_exclamation}: {description}",
+    "",
+    "{body}",
+    "",
+    "{breaking_change_footer}{footer}"
+  ],
   "commit-message-editor.staticTemplate": ["label: emoji (scope) short-description", "", "body", "", "footer"],
   "commit-message-editor.tokens": [
     {
@@ -25,153 +31,167 @@
       "name": "type",
       "options": [
         {
+          "label": "✨ feat (機能: 新規)",
           "description": "Implementation of new features.",
-          "label": "feat: ✨",
-          "value": "feat: ✨"
+          "value": "✨ feat"
         },
         {
+          "label": "🎈 feat (機能: 更新)",
           "description": "Repair of existing features.",
-          "label": "feat: 🎈",
-          "value": "feat: 🎈"
+          "value": "🎈 feat"
         },
         {
+          "label": "🪦 feat (機能: 削除)",
           "description": "Deletion of features.",
-          "label": "feat: ⚰️",
-          "value": "feat: ⚰️"
+          "value": "🪦 feat"
         },
         {
+          "label": "🐛 fix (修正)",
           "description": "Bug fixes.",
-          "label": "fix: 🐛",
-          "value": "fix: 🐛"
+          "value": "🐛 fix"
         },
         {
+          "label": "🔥 hotfix (修正: 緊急)",
           "description": "Critical bug fixes or major changes.",
-          "label": "fix: 🚑️",
-          "value": "fix: 🚑️"
+          "value": "🔥 hotfix"
         },
         {
+          "label": "📝 doc (ドキュメント)",
           "description": "Documentation changes.",
-          "label": "doc: 📝",
-          "value": "doc: 📝"
+          "value": "📝 doc"
         },
         {
-          "description": "Typography changes.",
-          "label": "typo: 🖋️",
-          "value": "typo: 🖋️"
+          "label": "💄 style (スタイル)",
+          "description": "Code Style Changes. (e.g. white-space, formatting, rename, typo, etc)",
+          "value": "💄 style"
         },
         {
-          "description": "Style changes.",
-          "label": "style: 💄",
-          "value": "style: 💄"
+          "label": "♻️ refactor (リファクタリング)",
+          "description": "Code Refactoring Changes.",
+          "value": "♻️ refactor"
         },
         {
-          "description": "Code format changes.",
-          "label": "format: 🎨",
-          "value": "format: 🎨"
+          "label": "🏎️ perf (パフォーマンス)",
+          "description": "Performance Improvement for Changes.",
+          "value": "🏎️ perf"
         },
         {
-          "description": "Rename files or directories.",
-          "label": "rename: 🚚",
-          "value": "rename: 🚚"
-        },
-        {
-          "description": "Code formatting or refactoring.",
-          "label": "refactor: ♻️",
-          "value": "refactor: ♻️"
-        },
-        {
+          "label": "🧪 test (テスト)",
           "description": "Test cases changes.",
-          "label": "test: 🧪",
-          "value": "test: 🧪"
+          "value": "🧪 test"
         },
         {
-          "description": "CI changes.",
-          "label": "ci: 🦺",
-          "value": "ci: 🦺"
+          "label": "📦️ build (ビルド)",
+          "description": "Build system or dependency changes.(e.g. npm, lock file, etc)",
+          "value": "📦️ build"
         },
         {
-          "description": "CD changes.",
-          "label": "cd: 🚀",
-          "value": "cd: 🚀"
+          "label": "🦺 ci (継続的インテグレーション)",
+          "description": "Continuous Integration Configuration File Changes.",
+          "value": "🦺 ci"
         },
         {
-          "description": "Build system or dependency changes.",
-          "label": "build: 📦️",
-          "value": "build: 📦️"
+          "label": "🚀 cd (継続的デリバリー)",
+          "description": "Continuous Delivery Configuration File changes.",
+          "value": "🚀 cd"
         },
         {
-          "description": "The Dockerfile changes.",
-          "label": "container: 🐳",
-          "value": "container: 🐳"
+          "label": "🔧 chore (雑務)",
+          "description": "Other changes that don't modify src or test files.",
+          "value": "🔧 chore"
         },
         {
-          "description": "The docker-compose changes.",
-          "label": "container: 🐙",
-          "value": "container: 🐙"
-        },
-        {
+          "label": "⚙️ chore (雑務: 設定)",
           "description": "Configuration changes.",
-          "label": "chore: 🔧",
-          "value": "chore: 🔧"
+          "value": "⚙️ chore"
         },
         {
+          "label": "🛠️ chore (雑務: スクリプト)",
           "description": "Development script changes.",
-          "label": "chore: 🔨",
-          "value": "chore: 🔨"
+          "value": "🛠️ chore"
         },
         {
-          "description": "Assets changes.",
-          "label": "chore: 🍱",
-          "value": "chore: 🍱"
+          "label": "📦 chore (雑務: 依存関係)",
+          "description": "Update dependencies.",
+          "value": "📦 chore"
         },
         {
+          "label": "🗑 chore (雑務: 削除)",
+          "description": "Removal of files or code.",
+          "value": "🗑 chore"
+        },
+        {
+          "label": "⏪️ revert (取り消し)",
           "description": "Reversion of changes.",
-          "label": "revert: ⏪️",
-          "value": "revert: ⏪️"
+          "value": "⏪️ revert"
         },
         {
+          "label": "🐳 container (コンテナ)",
+          "description": "The Dockerfile changes.",
+          "value": "🐳 container"
+        },
+        {
+          "label": "🐙 compose (コンポーズ)",
+          "description": "The docker-compose changes.",
+          "value": "🐙 compose"
+        },
+        {
+          "label": "🚧 wip (開発途中)",
           "description": "Changes that will be squashed.",
-          "label": "wip: 🚧",
-          "value": "wip: 🚧"
+          "value": "🚧 wip"
         },
         {
+          "label": "🎉 initial (ファーストコミット)",
           "description": "The first commit.",
-          "label": "initial: 🎉",
-          "value": "initial: 🎉"
+          "value": "🎉 initial"
         }
       ],
       "type": "enum"
     },
     {
-      "description": "Scope of changes.",
-      "label": "Scope",
+      "name": "breaking_change_exclamation",
+      "label": "Breaking Change (Exclamation)",
+      "description": "Indicates that this commit is a Breaking Change. (e.g. 'feat!: ...')",
+      "type": "boolean",
+      "value": "!",
+      "default": false
+    },
+    {
       "name": "scope",
-      "prefix": " (",
+      "label": "Scope",
+      "description": "Scope of Changes. (e.g. api, mobile, web, etc)",
+      "prefix": "(",
       "suffix": ")",
       "type": "text"
     },
     {
-      "description": "Commit summary.",
-      "label": "Short Description",
       "name": "description",
-      "prefix": " ",
+      "label": "Short Description",
+      "description": "Commit summary.",
       "type": "text"
     },
     {
-      "description": "Detailed description of commit.",
+      "name": "body",
       "label": "Body",
+      "description": "Detailed description of commit.",
+      "type": "text",
       "lines": 5,
       "maxLines": 10,
-      "multiline": true,
-      "name": "body",
-      "type": "text"
+      "multiline": true
     },
     {
-      "description": "Description of disruptive changes or signature.",
-      "label": "Footer",
-      "multiline": true,
+      "label": "Breaking Change (Footer)",
+      "name": "breaking_change_footer",
+      "type": "boolean",
+      "value": "BREAKING CHANGE: ",
+      "default": false
+    },
+    {
       "name": "footer",
-      "type": "text"
+      "label": "Footer",
+      "description": "Description of disruptive changes or signature.",
+      "type": "text",
+      "multiline": true
     }
   ],
   "commit-message-editor.view.defaultView": "form",
