--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,7 +19,7 @@
     "@elysiajs/swagger": "1.1.1",
     "@mona-ca/argon2id": "workspace:*",
     "@mona-ca/core": "workspace:*",
-    "arctic": "2.0.0-next.9",
+    "arctic": "2.0.1",
     "drizzle-orm": "^0.30.10",
     "elysia": "1.1.13",
     "lucia": "3.2.0",
