--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "nativewind": "^4.1.16"
   },
   "patchedDependencies": {
-    "elysia@1.1.23": "patches/elysia@1.1.23.patch",
-    "@elysiajs/swagger@1.1.5": "patches/@elysiajs%2Fswagger@1.1.5.patch"
+    "elysia@1.1.23": "patches/elysia@1.1.23.patch"
   }
 }
