--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,22 +19,23 @@
     "@elysiajs/swagger": "1.1.5",
     "@mona-ca/argon2id": "workspace:*",
     "@mona-ca/core": "workspace:*",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "arctic": "2.0.1",
     "drizzle-orm": "^0.30.10",
     "elysia": "1.1.23",
-    "lucia": "3.2.0",
-    "oslo": "1.2.1",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.4.31",
+    "@cloudflare/vitest-pool-workers": "^0.5.22",
     "@cloudflare/workers-types": "^4.20241022.0",
     "@mona-ca/tsconfig": "workspace:*",
     "better-sqlite3": "^11.5.0",
     "drizzle-kit": "^0.21.4",
     "pretty-format": "^29.7.0",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "~1.5.3",
+    "vitest": "~2.0.5",
     "wrangler": "3.77.0"
   },
   "overrides": {
