--- a/.github/workflows/app-build.yaml
+++ b/.github/workflows/app-build.yaml
@@ -6,12 +6,11 @@ on:
       - opened
       - synchronize
       - reopened
-      - ready_for_review
-
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     
     steps:
       - name: Checkout
