--- a/apps/api/.dev.vars.example
+++ b/apps/api/.dev.vars.example
@@ -3,4 +3,10 @@ DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+# Email API Key
 RESEND_API_KEY=
+
+# Pepper for hashing
+PASSWORD_PEPPER=
+SESSION_PEPPER=
