--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,7 +25,7 @@
     "drizzle-orm": "^0.30.10",
     "elysia": "1.1.23",
     "resend": "^4.0.0",
-    "ulid": "^2.3.0"
+    "ulid-workers": "^2.1.0"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.5.22",
@@ -36,7 +36,7 @@
     "pretty-format": "^29.7.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "~2.0.5",
-    "wrangler": "3.77.0"
+    "wrangler": "3.84.1"
   },
   "overrides": {
     "pretty-format": "^29.7.0"
