⚙️ chore(packages/ui): delete baseUrl, paths in tsconfig

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,10 +2,7 @@
   "extends": "@mona-ca/tsconfig/react-library.json",
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "dist",
-    "paths": {
-      "@ui/assets/*": ["./assets/*"]
-    }
+    "outDir": "dist"
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
