--- a/tools/tsconfig/package.json
+++ b/tools/tsconfig/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@tsconfig/bun": "^1.0.7",
     "@tsconfig/create-react-app": "^2.0.2",
     "@tsconfig/next": "^2.0.1",
     "@tsconfig/react-native": "^3.0.3",
