--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "types": ["@cloudflare/workers-types/experimental", "@cloudflare/vitest-pool-workers"]
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
