--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "check": "biome check --error-on-warnings --no-errors-on-unmatched",
-    "check:fix": "bun run check --write"
+    "check:fix": "bun run check --write",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@mona-ca/tailwind-helpers": "workspace:*",
