--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
 [workspace]
-members = ["packages/argon2id"]
+members = ["packages/argon2id", "packages/swc-plugin-*"]
 resolver = "2"
+
+[profile.release]
+lto = true
