--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,7 +31,9 @@
     "@cloudflare/vitest-pool-workers": "^0.5.22",
     "@cloudflare/workers-types": "^4.20241022.0",
     "@mona-ca/tsconfig": "workspace:*",
-    "better-sqlite3": "^11.5.0",
+    "@swc/cli": "^0.5.1",
+    "@swc/core": "^1.9.3",
+    "better-sqlite3": "^11.6.0",
     "drizzle-kit": "^0.21.4",
     "pretty-format": "^29.7.0",
     "vite-tsconfig-paths": "^4.3.2",
