--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,6 +7,7 @@
     "dev": "wrangler dev ./src/app/index.ts",
     "check": "biome check --error-on-warnings --no-errors-on-unmatched",
     "check:fix": "bun run check --write",
+    "build": "wrangler deploy --dry-run --outdir dist",
     "test": "vitest --run",
     "test:watch": "vitest --watch",
     "typecheck": "tsc --noEmit",
@@ -30,13 +31,16 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.5.22",
     "@cloudflare/workers-types": "^4.20241022.0",
+    "@mona-ca/swc-plugin-transform-variable-to-wasm-import": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
-    "better-sqlite3": "^11.5.0",
+    "@swc/cli": "^0.5.1",
+    "@swc/core": "^1.9.3",
+    "better-sqlite3": "^11.6.0",
     "drizzle-kit": "^0.21.4",
     "pretty-format": "^29.7.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "~2.0.5",
-    "wrangler": "3.86.1"
+    "wrangler": "3.91.0"
   },
   "overrides": {
     "pretty-format": "^29.7.0"
