--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,7 @@
     "check": "biome check --error-on-warnings --no-errors-on-unmatched",
     "check:fix": "bun run check --write",
     "build": "wrangler deploy --dry-run --outdir dist",
+    "start": "wrangler dev dist/index.js",
     "test": "vitest --run",
     "test:watch": "vitest --watch",
     "typecheck": "tsc --noEmit",
@@ -25,16 +26,13 @@
     "arctic": "2.0.1",
     "drizzle-orm": "^0.30.10",
     "elysia": "1.1.23",
-    "resend": "^4.0.0",
+    "resend": "^4.0.1",
     "ulid-workers": "^2.1.0"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.5.22",
-    "@cloudflare/workers-types": "^4.20241022.0",
-    "@mona-ca/swc-plugin-transform-variable-to-wasm-import": "workspace:*",
+    "@cloudflare/vitest-pool-workers": "^0.5.32",
+    "@cloudflare/workers-types": "^4.20241127.0",
     "@mona-ca/tsconfig": "workspace:*",
-    "@swc/cli": "^0.5.1",
-    "@swc/core": "^1.9.3",
     "better-sqlite3": "^11.6.0",
     "drizzle-kit": "^0.21.4",
     "pretty-format": "^29.7.0",
