🐳 container(docker): add Docker Compose setup for development environment

--- a/apps/api/.dev.vars.example
+++ b/apps/api/.dev.vars.example
@@ -4,9 +4,13 @@ DISCORD_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-# Email API Key
+# Resend
 RESEND_API_KEY=
 
 # Pepper for hashing
 PASSWORD_PEPPER=
 SESSION_PEPPER=
+
+# Upstash Redis
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
